--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
                 <div class="teclado--botao">0</div>
             </div>
             <div class="teclado--linha">
-                <div class="teclado--botao">Branco</div>
-                <div class="teclado--botao">Corrige</div>
-                <div class="teclado--botao">Confirma</div>
+                <div class="teclado--botao btn--branco">Branco</div>
+                <div class="teclado--botao btn--corrige">Corrige</div>
+                <div class="teclado--botao btn--confirma">Confirma</div>
             </div>
         </div>
     </div>
