--- a/index.html
+++ b/index.html
@@ -9,7 +9,30 @@
 <body>
     <div class="urna">
         <div class="tela">
-        ...
+            <div class="divisao-1">
+                <div class="d-1-left">
+                    <div class="d-1-1">
+                        <span>SEU VOTO PARA</span>
+                    </div>
+                    <div class="d-1-2">
+                        <span>VEREADOR</span>
+                    </div>
+                    <div class="d-1-3">
+                        ...
+                    </div>
+                    <div class="d-1-4">
+                        Nome: Nn <br>
+                        Partido: Nn <br>
+                        Vice-Prefeito: Nn
+                    </div>
+                </div>
+                <div class="d-1-right">....</div>
+            </div>
+            <div class="divisao-2">
+                Aperte a tela: <br>
+                CONFIRMA para CONFIRMAR este voto<br>
+                CORRIGE para REINICIAR este voto
+            </div>
         </div>
         
         <div class="teclado">
