--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
                         <span>VEREADOR</span>
                     </div>
                     <div class="d-1-3">
-                        ...
+                        <div class="numero pisca"></div>
+                        <div class="numero"></div>
                     </div>
                     <div class="d-1-4">
                         Nome: Nn <br>
@@ -26,7 +27,16 @@
                         Vice-Prefeito: Nn
                     </div>
                 </div>
-                <div class="d-1-right">....</div>
+                <div class="d-1-right">
+                    <div class="d-1-image">
+                        <img src="assets/images/84.jpg" alt="" srcset="">
+                        Prefeito
+                    </div>
+                    <div class="d-1-image small">
+                        <img src="assets/images/84_2.jpg" alt="" srcset="">
+                        Vice-Prefeito
+                    </div>
+                </div>
             </div>
             <div class="divisao-2">
                 Aperte a tela: <br>
