--- a/index.html
+++ b/index.html
@@ -38,41 +38,40 @@
                     </div>
                 </div>
             </div>
-            <div class="divisao-2">
-                Aperte a tela: <br>
-                CONFIRMA para CONFIRMAR este voto<br>
+            <div class="d-2">
+                Aperte a tela:<br/>
+                CONFIRMA para CONFIRMAR este voto<br/>
                 CORRIGE para REINICIAR este voto
             </div>
         </div>
         
         <div class="teclado">
             <div class="teclado--linha">
-                <div class="teclado--botao">1</div>
-                <div class="teclado--botao">2</div>
-                <div class="teclado--botao">3</div>
+                <div class="teclado--botao" onclick="clicou('1')">1</div>
+                <div class="teclado--botao" onclick="clicou('2')">2</div>
+                <div class="teclado--botao" onclick="clicou('3')">3</div>
             </div>
             <div class="teclado--linha">
-                <div class="teclado--botao">4</div>
-                <div class="teclado--botao">5</div>
-                <div class="teclado--botao">6</div>
+                <div class="teclado--botao" onclick="clicou('4')">4</div>
+                <div class="teclado--botao" onclick="clicou('5')">5</div>
+                <div class="teclado--botao" onclick="clicou('6')">6</div>
             </div>
             <div class="teclado--linha">
-                <div class="teclado--botao">7</div>
-                <div class="teclado--botao">8</div>
-                <div class="teclado--botao">9</div>
+                <div class="teclado--botao" onclick="clicou('7')">7</div>
+                <div class="teclado--botao" onclick="clicou('8')">8</div>
+                <div class="teclado--botao" onclick="clicou('9')">9</div>
             </div>
             <div class="teclado--linha">
-                <div class="teclado--botao">0</div>
+                <div class="teclado--botao" onclick="clicou('0')">0</div>
             </div>
             <div class="teclado--linha">
-                <div class="teclado--botao btn--branco">Branco</div>
-                <div class="teclado--botao btn--corrige">Corrige</div>
-                <div class="teclado--botao btn--confirma">Confirma</div>
+                <div class="teclado--botao btn--branco" onclick="branco()">Branco</div>
+                <div class="teclado--botao btn--corrige" onclick="corrige()">Corrige</div>
+                <div class="teclado--botao btn--confirma" onclick="confirma()">Confirma</div>
             </div>
         </div>
     </div>
-
-    <script src="assets/script.js"></script>
     <script src="assets/etapas.js"></script>
+    <script src="assets/script.js"></script>
 </body>
 </html>
