--- a/index.html
+++ b/index.html
@@ -71,6 +71,60 @@
             </div>
         </div>
     </div>
+
+    <div class="candidatos-lista">
+        <h2>Lista de Candidatos</h2>
+        <div class="vereadores">
+        <p>Vereador</p>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Nome</th>
+                        <th>Partido</th>
+                        <th>Número</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Beltrano da Silva</td>
+                        <td>ABC</td>
+                        <td>77222</td>
+                    </tr>
+                    <tr>
+                        <td>Fulano de Tal</td>
+                        <td>DEF</td>
+                        <td>38111</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        
+        <div class="prefeito">
+        <p>Prefeito</p>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Nome</th>
+                        <th>Partido</th>
+                        <th>Número</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Ciclano</td>
+                        <td>ABC</td>
+                        <td>99</td>
+                    </tr>
+                    <tr>
+                        <td>Zulano</td>
+                        <td>DEF</td>
+                        <td>84</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+
     <script src="assets/etapas.js"></script>
     <script src="assets/script.js"></script>
 </body>
